<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory android:title="@string/setting_category_login" android:key="setting_category_login" >
        <CheckBoxPreference android:title="@string/setting_item_loginsaveauto" android:key="setting_item_loginsaveauto" android:summary="@string/setting_item_loginsaveauto_desc"/>
        <CheckBoxPreference android:title="@string/setting_item_loginauto" android:key="setting_item_loginauto" android:summary="@string/setting_item_loginauto_desc"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_category_daily" android:key="setting_category_daily">
	    <CheckBoxPreference android:title="@string/setting_item_begintimedefault" android:key="setting_item_begintimedefault" android:summary="@string/setting_item_begintimedefault_desc"/>
	    <CheckBoxPreference android:title="@string/setting_item_endtimedefault" android:key="setting_item_endtimedefault" android:summary="@string/setting_item_endtimedefault_desc"/>
    	<ListPreference android:title="@string/setting_item_typedefault" android:key="setting_item_typedefault" android:summary="@string/setting_item_typedefault_desc" android:entries="@array/daily_type_array" android:entryValues="@array/daily_type_array" />
    	<ListPreference android:title="@string/setting_item_positiondefault" android:key="setting_item_positiondefault" android:summary="@string/setting_item_positiondefault_desc" android:entries="@array/daily_position_array" android:entryValues="@array/daily_position_array"/>
    </PreferenceCategory>
    <!-- <PreferenceCategory android:title="@string/setting_category_mode" android:key="setting_category_mode">
        <SwitchPreference android:title="@string/setting_item_nonepic" android:key="setting_item_nonepic" android:summary="@string/setting_item_nonepic_desc"/>
    </PreferenceCategory> -->
    
</PreferenceScreen>