<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      android:background="@color/ultra_gray2" 
      android:padding="12dp"
      android:layout_width="match_parent" android:layout_height="match_parent">
      
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <ImageView android:src="@drawable/ic_launcher" android:layout_gravity="center_horizontal" android:layout_height="96dp" android:layout_width="96dp" />
        <TextView style="@style/mylabel1" android:gravity="center_vertical|center_horizontal" android:textAlignment="center"  android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_version"/>
        <LinearLayout android:layout_marginTop="5dp" android:gravity="center_vertical" android:background="@drawable/common_card_background" android:padding="12dp"  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" >
        	<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        	    <TextView android:text="1" android:background="@drawable/blue_circle" android:layout_width="28dp" android:layout_height="28dp" android:gravity="center_vertical|center_horizontal" android:textSize="18sp" android:textColor="@color/txt_white" />
        	    <TextView android:textSize="15sp" android:layout_marginLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_content1"/>
        	</LinearLayout>
        	<LinearLayout android:layout_marginTop="5dp"  android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        	    <TextView android:text="2" android:background="@drawable/blue_circle" android:layout_width="28dp" android:layout_height="28dp" android:gravity="center_vertical|center_horizontal" android:textSize="18sp" android:textColor="@color/txt_white" />
        	    <TextView android:textSize="15sp"  android:layout_marginLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_content2"/>
        	</LinearLayout>
        	<LinearLayout android:layout_marginTop="5dp" android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        	    <TextView android:text="3" android:background="@drawable/blue_circle" android:layout_width="28dp" android:layout_height="28dp" android:gravity="center_vertical|center_horizontal" android:textSize="18sp" android:textColor="@color/txt_white" />
        	    <TextView android:textSize="15sp"  android:layout_marginLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_content3"/>
        	</LinearLayout>
        </LinearLayout>
        <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" >
            <LinearLayout android:layout_marginTop="5dp"  android:gravity="left|center_vertical" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal"  android:background="@drawable/common_card_background">
            	<ImageView android:src="@drawable/qq" android:layout_weight="0" android:layout_width="48dp" android:layout_height="48dp" />
        		<TextView android:textSize="15sp" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content" android:text="339446092"/>
        	</LinearLayout>
        	<LinearLayout android:gravity="left|center_vertical" android:layout_marginTop="5dp" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal"  android:background="@drawable/common_card_background">
            	<ImageView android:src="@drawable/email" android:layout_weight="0" android:layout_width="48dp" android:layout_height="48dp" />
        		<TextView android:textSize="15sp" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content" android:text="huangjin@ultrapower.com.cn"/>
        	</LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>